# Joypad

./: README.md
zs308a_240111_rel3-joypad/application/bt_watch_call/src/launcher/: CMakeLists.txt  Kconfig  aod_clock_view.c  clock_view.c  clock_view.h  heart_view.c  launcher_app.c  launcher_app.h  main_view.h  message_view.c
zs308a_240111_rel3-joypad/application/bt_watch_call/src/launcher/alipay/: CMakeLists.txt  alipay_ui.c  presenter_alipay.c  wxpay_pay_view.c
zs308a_240111_rel3-joypad/application/bt_watch_call/src/launcher/applist/: applist.c  applist_view.c  test_long_view.c
zs308a_240111_rel3-joypad/application/bt_watch_call/src/launcher/clock_selector/: clock_selector.h  clock_selector_subview.c  clock_selector_view.c
zs308a_240111_rel3-joypad/application/bt_watch_no_psram/src/launcher/: CMakeLists.txt  Kconfig  alarm_set_view.c  alipay_main_view.c  aod_clock_view.c  clock_view.c  clock_view.h  heart_view.c  launcher_app.c  launcher_app.h  main_view.c  main_view.h  message_view.c  music_view.c  sport_view.c  test_appbar_views.c
zs308a_240111_rel3-joypad/application/bt_watch_no_psram/src/launcher/alipay/: alipay_bind_view.c  alipay_pay_view.c  alipay_ui.c  alipay_ui.h  alipay_unbind_view.c
zs308a_240111_rel3-joypad/application/bt_watch_no_psram/src/launcher/applist/: applist.c  applist.h  applist_view.c  applist_view.h  compass_view.c  test_long_view.c
zs308a_240111_rel3-joypad/application/bt_watch_no_psram/src/launcher/clock_selector/: CMakeLists.txt  clock_selector.c  clock_selector.h  clock_selector_subview.c  clock_selector_subview.h  clock_selector_view.c
zs308a_240111_rel3-joypad/application/bt_watch_no_psram/src/launcher/health/: bp_view.c  health.c  spo2_view.c
zs308a_240111_rel3-joypad/application/bt_watch_no_psram/src/launcher/power/: power_view.c
zs308a_240111_rel3-joypad/application/bt_watch_no_psram/src/launcher/stopwatch/: stopwatch_view.c
zs308a_240111_rel3-joypad/framework/display/: CMakeLists.txt  Kconfig  Kconfig.font  Kconfig.lvgl  display.lib  ui_manager.c
zs308a_240111_rel3-joypad/framework/display/include/: bitmap_font_api.h  font_mempool.h  graphic_buffer.h  msgbox_cache.h  res_manager_api.h  res_mempool.h  ui_manager.h  ui_mem.h  ui_service.h  ui_surface.h  view_cache.h  view_manager.h  view_stack.h
zs308a_240111_rel3-joypad/framework/display/include/lvgl/: lvgl_bitmap_font.h  lvgl_gpu.h  lvgl_img_loader.h  lvgl_memory.h  lvgl_res_loader.h
zs308a_240111_rel3-joypad/framework/display/include/memory/: gui_text_cache.h
zs308a_240111_rel3-joypad/framework/display/lvgl/: CMakeLists.txt  lvgl_img_loader.c  lvgl_memory.c  lvgl_res_loader.c
zs308a_240111_rel3-joypad/framework/display/memory/: CMakeLists.txt  Kconfig  font_mempool.c  res_mempool.c  ui_mem.c  ui_mem_fb.c  ui_mem_gui.c  ui_mem_res.c
zs308a_240111_rel3-joypad/framework/display/res_manager/: CMakeLists.txt  res_manager_api.c
zs308a_240111_rel3-joypad/framework/display/res_manager/sty_conv/: sty_conv.c
zs308a_240111_rel3-joypad/framework/display/ui_service/: CMakeLists.txt  gesture.c  msgbox_cache_lvgl.c  view_cache.c  view_cache_lite.c  view_stack.c
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/: CMakeLists.txt  README.txt  prj.conf
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/boards/: ats3085_dvb_watch.conf  ats3085_dvb_watch_sdnand.conf  ats3085c_dvb_watch_ext_nor_max.conf
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/boards/ats3085_dvb_watch/: firmware.xml  fwimage.cfg
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/boards/ats3085l_core_joystick_evb_kc/: firmware.xml
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/boards/ats3085l_dvb_watch_ext_nor_max/: firmware.xml
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/fs_sdfs/sdfs_k/: adMUSIC.dsp
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/src/: card_reader.c  system_app_main.c  system_audio_policy.c  test_codec.c
zs308a_240111_rel3-joypad/zephyr/samples/test_codec/udisk/: mic_in.pcm  sco_in.pcm
zs308a_240111_rel3-joypad/zephyr/soc/arm/actions/lark/: CMakeLists.txt  Kconfig.series  Kconfig.soc  brom_interface.h  bt_test.lib  policy_sleep.c  soc.c  soc.h  soc_anc.h  soc_atp.h  soc_boot.c  soc_boot.h  soc_bttest.h  soc_clock.c  (+18 more)
(+1376 files in other folders)
